--- a/package.json
+++ b/package.json
@@ -12,17 +12,26 @@
   "dependencies": {
     "@fontsource-variable/dm-sans": "^5.0.7",
     "@fontsource/dm-serif-display": "^5.0.21",
+    "@nextui-org/button": "^2.0.37",
+    "@nextui-org/date-input": "^2.1.3",
+    "@nextui-org/input": "^2.2.4",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
+    "@tanstack/react-query": "^5.52.0",
+    "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@iconify/react": "^4.1.1",
     "@types/node": "^22.4.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
