--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/input": "^2.2.4",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
+    "@nextui-org/tooltip": "^2.0.39",
     "@tanstack/react-query": "^5.52.0",
     "@tanstack/react-query-devtools": "4",
     "axios": "^1.7.4",
