--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/button": "^2.0.37",
     "@nextui-org/date-input": "^2.1.3",
     "@nextui-org/input": "^2.2.4",
+    "@nextui-org/popover": "^2.1.27",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "@nextui-org/tooltip": "^2.0.39",
