--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nextui-org/tooltip": "^2.0.39",
     "@tanstack/react-query": "^5.52.0",
     "@tanstack/react-query-devtools": "4",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
