--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/input": "^2.2.4",
     "@nextui-org/pagination": "^2.0.35",
     "@nextui-org/popover": "^2.1.27",
+    "@nextui-org/switch": "^2.0.33",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "@nextui-org/tooltip": "^2.0.39",
