--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "@nextui-org/tooltip": "^2.0.39",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@tanstack/react-query": "^5.52.0",
     "@tanstack/react-query-devtools": "4",
     "@tanstack/react-table": "^8.20.5",
