--- a/package.json
+++ b/package.json
@@ -13,23 +13,30 @@
     "@fontsource-variable/dm-sans": "^5.0.7",
     "@fontsource/dm-serif-display": "^5.0.21",
     "@hookform/resolvers": "^3.9.0",
+    "@internationalized/date": "3.0.0-nightly.2967",
     "@nextui-org/button": "^2.0.37",
     "@nextui-org/date-input": "^2.1.3",
+    "@nextui-org/date-picker": "^2.1.6",
     "@nextui-org/dropdown": "^2.1.29",
     "@nextui-org/input": "^2.2.4",
     "@nextui-org/pagination": "^2.0.35",
     "@nextui-org/popover": "^2.1.27",
+    "@nextui-org/select": "^2.2.5",
+    "@nextui-org/spinner": "^2.0.33",
     "@nextui-org/switch": "^2.0.33",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "@nextui-org/tooltip": "^2.0.39",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@tanstack/react-query": "^5.52.0",
     "@tanstack/react-query-devtools": "4",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.28",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
