--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/date-picker": "^2.1.6",
     "@nextui-org/dropdown": "^2.1.29",
     "@nextui-org/input": "^2.2.4",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/pagination": "^2.0.35",
     "@nextui-org/popover": "^2.1.27",
     "@nextui-org/select": "^2.2.5",
